<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:background="@color/md_grey_300"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/login_view"
    android:layoutDirection="ltr"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

    </RelativeLayout>






    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/cardview_shadow_start_color">


        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <TextView
                android:fontFamily="@font/abdo_h"
                android:textSize="45dp"
                android:text="@string/login_login_text"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:background="@color/cardview_shadow_start_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_email"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="20dp"
                    android:textColor="@color/md_white_1000"
                    android:textColorHint="@color/md_white_1000"
                    android:background="@null"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_or_phone"
                    android:maxLines="1"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:fontFamily="@font/abdo_h" />

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/cardview_shadow_start_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_pass"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/md_white_1000"
                    android:textColorHint="@color/md_white_1000"
                    android:background="@null"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:fontFamily="@font/abdo_h" />

            </LinearLayout>



            <Button
                android:theme="@style/PSButton.Black"
                android:textSize="22dp"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login_btn"
                android:textStyle="bold"
                android:fontFamily="@font/abdo_h"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />


            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>