<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">





    <ScrollView
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/back_nav"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_profile_map"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/o_white"
                    android:padding="2dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:src="@drawable/default_avatar" />

                <TextView
                    android:id="@+id/name_profile_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:maxLines="1"
                    android:fontFamily="@font/abdo_b"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="17dp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/email_profile_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:fontFamily="@font/abdo_b"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textDirection="ltr"
                    android:textColor="@color/white" />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_marginTop="10dp"
                            android:id="@+id/the_charge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nav_Your_service_number"
                            android:gravity="center"
                            android:maxLines="2"
                            android:fontFamily="@font/abdo_b"
                            android:textSize="15dp"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:textStyle="bold" />


                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="140 ريال"
                            android:gravity="center"
                            android:maxLines="1"
                            android:fontFamily="@font/abdo_b"
                            android:textSize="14dp"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <LinearLayout
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_marginTop="10dp"
                            android:id="@+id/number_service"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nav_Balance"
                            android:textStyle="bold"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:maxLines="2"
                            android:fontFamily="@font/abdo_b"
                            android:textSize="15dp" />



                        <TextView
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="12"
                            android:gravity="center"
                            android:maxLines="1"
                            android:fontFamily="@font/abdo_b"
                            android:textSize="14dp"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:textStyle="bold" />
                    </LinearLayout>


                </LinearLayout>







            </LinearLayout>






            <LinearLayout
                android:id="@+id/map_go_profile"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/WW"
                    android:fontFamily="@font/abdo_b"
                    android:layout_weight="8"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:layout_marginEnd="40dp"
                    android:textStyle="bold"
					   android:textDirection="ltr"
                    android:text="@string/nav_profile"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>





            <LinearLayout
                android:id="@+id/map_go_my_my_order"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:text="@string/nav_my_order"
                    android:fontFamily="@font/abdo_b"
                    android:layout_marginTop="5dp"
					   android:textDirection="ltr"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="0.1dp">

            </View>


            <LinearLayout
                android:id="@+id/map_go_share_app"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:textStyle="bold"
					android:textDirection="ltr"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/abdo_b"
                    android:text="@string/nav_share_app"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/map_go_question"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/abdo_b"
					   android:textDirection="ltr"
                    android:text="@string/nav_question"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/map_go_driver_app_store"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/nav_join_to_staff"
                    android:textDirection="ltr"
                    android:fontFamily="@font/abdo_b"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/map_go_payment"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/nav_Your_service_number"
                    android:textDirection="ltr"
                    android:fontFamily="@font/abdo_b"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>



            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="0.1dp">

            </View>


            <LinearLayout
                android:id="@+id/map_go_law_ruls"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:text="@string/nav_Terms_and_Conditions"
                    android:textDirection="ltr"
                    android:fontFamily="@font/abdo_b"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/map_go_rating_app"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/nav_rating_app"
                    android:textDirection="ltr"
                    android:fontFamily="@font/abdo_b"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/map_go_contact_us"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:fontFamily="@font/abdo_b"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/nav_Connect_with_us"
                    android:layout_marginStart="20dp"
                    android:textDirection="ltr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>



            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="0.1dp">

            </View>


            <LinearLayout
                android:id="@+id/map_go_logOut"

                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/AB"
                    android:layout_weight="8"
                    android:fontFamily="@font/abdo_b"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:text="@string/nav_sign_out"
                    android:textDirection="ltr"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>









            <LinearLayout
			    android:id="@+id/nav_change_language"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <TextView
                    android:layout_weight="8"
                    android:textColor="@color/green"
                    android:textSize="12dp"
                    android:fontFamily="@font/abdo_b"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="start"
                    android:text="@string/nav_language"
                    android:textDirection="ltr"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>




            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:background="@android:color/darker_gray"
                android:layout_height="0.1dp">

            </View>

            <LinearLayout
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <ImageView
                    android:id="@+id/nav_facebook"
                    android:layout_weight="1"
                    android:src="@drawable/ic_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/nav_whatsapp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_wahstsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/nav_twitter"
                    android:layout_weight="1"
                    android:src="@drawable/ic_twiter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />



            </LinearLayout>




            <View
                android:layout_width="match_parent"
                android:layout_height="50dp">

            </View>







        </LinearLayout>













    </ScrollView>



</LinearLayout>